Implement login form with reactive validation and basic submission logic - Created a login form using Angular's Reactive Forms. - Included form validation for email (required and valid format) and password (required). - Added error messages for invalid fields (email and password).

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -14,7 +14,7 @@ header .logo {
 .nav-link {
   font-size: 1rem;
   margin-right: 1rem;
-  color: v.$color-secondary !important;
+  color: white;
   text-decoration: none;
 
   &.active,
