--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<app-header> </app-header>
-<app-hero></app-hero>
-<app-about></app-about>
-<app-products> </app-products>
-<app-contact> </app-contact>
-<app-faq> </app-faq>
-<app-footer> </app-footer>
+<router-outlet></router-outlet>
