--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -34,7 +34,8 @@
           </li>
           <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
           <li class="nav-item">
-            <a href="loginForm.html" class="btn btn-success">Join Us</a>
+            <!-- header.component.html -->
+            <a [routerLink]="'/login'" class="btn btn-success">Join Us</a>
           </li>
         </ul>
       </div>
