--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,4 +1,3 @@
-/* General Reset */
 body {
   margin: 0;
   padding: 0;
@@ -24,12 +23,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(
-      0,
-      0,
-      0,
-      0.5
-    ); /* Reduced opacity for better visibility of background */
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 0;
   }
 }
