--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="input-group">
         <div class="input-icon">
-          <i class="fa fa-envelope"></i>
+          <i class="bi bi-envelope"></i>
         </div>
         <input
           type="email"
@@ -22,7 +22,7 @@
       </div>
       <div class="input-group">
         <div class="input-icon">
-          <i class="fa fa-lock"></i>
+          <i class="bi bi-lock"></i>
         </div>
         <input
           type="password"
