--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -65,13 +65,15 @@ body {
     border-radius: 8px;
     overflow: hidden;
     background-color: #f9f9f9;
+    height: 50px; // Set the height of the input group
 
     input {
       flex: 1;
-      padding: 1rem;
+      padding: 0.75rem; // Adjust padding to make the input field height match the icon
       border: none;
       font-size: 1rem;
       background: none;
+      height: 100%; // Make sure the input field takes up full height
 
       &:focus {
         outline: none;
@@ -80,12 +82,13 @@ body {
 
     .input-icon {
       padding: 0 1rem;
-      background-color: transparent; /* Remove the background color */
+      background-color: #4caf50;
       display: flex;
       align-items: center;
       justify-content: center;
       font-size: 1.3rem;
-      color: #4caf50;
+      color: white;
+      height: 100%;
     }
   }
 
