feat: Implement sign-up Component and modified admin dashboard - Created SignUpComponent with reactive forms and validation - Implemented user registration and storage in local storage - Fetched and displayed users in AdminDashboardComponent - Added logout functionality with redirection to home component

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -42,7 +42,10 @@
       <button type="submit" [disabled]="loginForm.invalid">Login</button>
     </form>
     <div class="haveAccount">
-      <p>Don't have an account? <a routerLink="/signup">Sign up</a></p>
+      <p>
+        Don't have an account?
+        <a routerLink="/signUp">Sign up</a>
+      </p>
     </div>
   </div>
 </div>
