--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,14 +12,16 @@
           placeholder="Enter your email"
           required
         />
-        <div
-          *ngIf="
-            loginForm.get('email')?.invalid && loginForm.get('email')?.touched
-          "
-        >
-          <small class="error">Valid email is required.</small>
-        </div>
       </div>
+      <div
+        *ngIf="
+          loginForm.get('email')?.invalid && loginForm.get('email')?.touched
+        "
+        class="error"
+      >
+        <small>Valid email is required.</small>
+      </div>
+
       <div class="input-group">
         <div class="input-icon">
           <i class="bi bi-lock"></i>
@@ -30,15 +32,17 @@
           placeholder="Enter your password"
           required
         />
-        <div
-          *ngIf="
-            loginForm.get('password')?.invalid &&
-            loginForm.get('password')?.touched
-          "
-        >
-          <small class="error">Password is required.</small>
-        </div>
       </div>
+      <div
+        *ngIf="
+          loginForm.get('password')?.invalid &&
+          loginForm.get('password')?.touched
+        "
+        class="error"
+      >
+        <small>Password is required.</small>
+      </div>
+
       <button type="submit" [disabled]="loginForm.invalid">Login</button>
     </form>
     <div class="haveAccount">
