--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -58,22 +58,22 @@ body {
   }
 
   .input-group {
+    margin-top: 1rem;
     display: flex;
     align-items: center;
-    margin-bottom: 1.5rem;
     border: 1px solid #ddd;
     border-radius: 8px;
     overflow: hidden;
     background-color: #f9f9f9;
-    height: 50px; // Set the height of the input group
+    height: 50px;
 
     input {
       flex: 1;
-      padding: 0.75rem; // Adjust padding to make the input field height match the icon
+      padding: 0.75rem;
       border: none;
       font-size: 1rem;
       background: none;
-      height: 100%; // Make sure the input field takes up full height
+      height: 100%;
 
       &:focus {
         outline: none;
@@ -92,7 +92,14 @@ body {
     }
   }
 
+  .error {
+    color: #f44336;
+    font-size: 0.85rem;
+    margin-top: 0;
+    text-align: left;
+  }
   button {
+    margin-top: 1rem;
     padding: 1rem 1.5rem;
     background-color: #4caf50;
     color: white;
